--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <script id="placesTmpl" type="text/html">
                 <tr>
                   <td>
-                    <input data-bind="value: title" />
+                     <a href="#" ><p data-bind="text:title"></p></a>
                   </td>
                 </tr>
               </script>
@@ -37,6 +37,8 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArYCyWp6A4195BKhwPGJWLuKL9_gIOyLw&v=3&callback=initMap">
   </script>
   <script src="js/knockout.js"></script>
+
   <script src="js/main.js"></script>
   <script src="js/filter.js"></script>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </html>
