--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
   </head>
   <body>
     <div class="container">
-      <div class="options-box">
-        <h1>Find Your New NYC Home</h1>
-        <div>
-          <input data-bind="value: filter, valueUpdate: 'afterkeydown'" />
+      <div class="row">
+        <div class="col-xs-12">
+        <button id ="hideandexpand" href="#" class="btn btn-info">|||</button>
+      </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-3" id="hideandseek">
+          <h1 class="h1b">New York Places</h1>
+          <input type="text"  data-bind="value: filter, valueUpdate: 'afterkeydown'" />
           <br/>
           <!-- <input id="hide-listings" type="button" value="Hide Listings"> -->
           <table id="mytable">
             <thead>
-              <tr>
-                <th>Location Name</th>
-              </tr>
             </thead>
             <tbody data-bind="template: { name: 'placesTmpl', foreach: filteredItems }"></tbody>
               <script id="placesTmpl" type="text/html">
@@ -30,9 +32,9 @@
               <!-- <button data-bind="click: function () { console.log($context); }"> Context Log </button> -->
           </table>
         </div>
-      </div>
-      <div id="map"></div>
+      <div class="col-xs-9" id="map"></div>
     </div>
+  </div>
   </body>
   <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArYCyWp6A4195BKhwPGJWLuKL9_gIOyLw&v=3&callback=initMap">
@@ -40,5 +42,28 @@
   <script src="js/knockout.js"></script>
   <script src="js/main.js"></script>
   <script src="js/filter.js"></script>
+  <script src="js/hide.js"></script>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  </html>
+  <script>
+  $("#hideandexpand").click(function() {
+    if ($('#hideandseek').css('display')!='none')
+    {
+      $('#hideandseek').hide();
+      $('#map').removeClass('col-xs-9');
+      $('#map').addClass('col-xs-11');
+    }
+    else
+    {
+      $('#hideandseek').show();
+      $('#map').removeClass('col-xs-11');
+      $('#map').addClass('col-xs-9');
+    }
+  });
+    </script>
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" >
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</html>
