Applied styling across the filter

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-xs-3" id="hideandseek">
           <h1 class="h1b">New York Places</h1>
-          <input type="text"  data-bind="value: filter, valueUpdate: 'afterkeydown'" />
+          <input type="text" class="form-control"  data-bind="value: filter, valueUpdate: 'afterkeydown'" />
           <br/>
           <!-- <input id="hide-listings" type="button" value="Hide Listings"> -->
           <table id="mytable">
@@ -42,7 +42,7 @@
   <script src="js/knockout.js"></script>
   <script src="js/main.js"></script>
   <script src="js/filter.js"></script>
-  <script src="js/hide.js"></script>
+  <!-- <script src="js/hide.js"></script> -->
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script>
   $("#hideandexpand").click(function() {
