Added google Error

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
   </div>
   </body>
   <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArYCyWp6A4195BKhwPGJWLuKL9_gIOyLw&v=3&callback=initMap">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArYCyWp6A4195BKhwPGJWLuKL9_gIOyLw&v=3&callback=initMap" onerror="error()">
   </script>
   <script src="js/knockout.js"></script>
   <script src="js/main.js"></script>
   <script src="js/filter.js"></script>
   <!-- <script src="js/hide.js"></script> -->
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="https://code.jquery.com/jquery-1.10.2.js" onerror="error()"></script>
   <script>
   $("#hideandexpand").click(function() {
     if ($('#hideandseek').css('display')!='none')
@@ -65,5 +65,5 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" >
 <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" onerror="error()"></script>
 </html>
