--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-xs-3" id="hideandseek">
           <h1 class="h1b">New York Places</h1>
-          <input type="text" class="form-control"  data-bind="value: filter, valueUpdate: 'afterkeydown'" />
+          <input type="text" class="form-control" placeholder="Search from below" data-bind="value: filter, valueUpdate: 'afterkeydown'" />
           <br/>
           <!-- <input id="hide-listings" type="button" value="Hide Listings"> -->
           <table id="mytable">
