added updated jquery CDN

--- a/index.html
+++ b/index.html
@@ -44,17 +44,14 @@
   <script src="js/main.js"></script>
   <script src="js/filter.js"></script>
   <!-- <script src="js/hide.js"></script> -->
-  <script src="https://code.jquery.com/jquery-1.10.2.js" onerror="error()"></script>
+  <!-- <script src="https://code.jquery.com/jquery-1.10.2.js"></script> -->
+  <!-- <script src="js/jquery-3.3.1"> </script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" onerror="Jqueryerror"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="js/button_hide.js" ></script>
+
   <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArYCyWp6A4195BKhwPGJWLuKL9_gIOyLw&v=3&callback=initMap" onerror="error()">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArYCyWp6A4195BKhwPGJWLuKL9_gIOyLw&v=3&callback=initMap" onerror="googleerror()">
   </script>
-
-
-  <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" >
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" onerror="error()"></script>
-<script src="js/button_hide.js" ></script>
 </html>
