--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- <script src="js/hide.js"></script> -->
   <!-- <script src="https://code.jquery.com/jquery-1.10.2.js"></script> -->
   <!-- <script src="js/jquery-3.3.1"> </script> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" onerror="Jqueryerror"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" onerror="Jqueryerror()></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="js/button_hide.js" ></script>
