--- a/index.html
+++ b/index.html
@@ -43,14 +43,10 @@
   <script src="js/knockout.js"></script>
   <script src="js/main.js"></script>
   <script src="js/filter.js"></script>
-  <!-- <script src="js/hide.js"></script> -->
-  <!-- <script src="https://code.jquery.com/jquery-1.10.2.js"></script> -->
-  <!-- <script src="js/jquery-3.3.1"> </script> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" onerror="Jqueryerror()></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <link rel="stylesheet" href="bootstrap-3.3.7/css/bootstrap.min.css"/>
+  <script src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
   <script src="js/button_hide.js" ></script>
-
   <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArYCyWp6A4195BKhwPGJWLuKL9_gIOyLw&v=3&callback=initMap" onerror="googleerror()">
   </script>
